--- a/modules/smart-agent_postgresql/conf/readme.yaml
+++ b/modules/smart-agent_postgresql/conf/readme.yaml
@@ -3,17 +3,13 @@ documentations:
     url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/postgresql.md'
   - name: Smart Agent monitor sql
     url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/sql.md'
+  - name: Splunk Observability integration postgresql
+    url: 'https://docs.splunk.com/Observability/gdi/postgresql/postgresql.html'
+  - name: Splunk Observability integration sql
+    url: 'https://docs.splunk.com/Observability/gdi/sql/sql.html'
 
 source_doc: |
-  Check the [integration
-  documentation](https://docs.signalfx.com/en/latest/integrations/integrations-reference/integrations.postgresql.html)
-  in addition to the monitor one which it uses.
-
   ### Monitors
-
-  The detectors in this module are based on metrics reported by the following monitors:
-
-  * [postgresql](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/postgresql.md)
 
   The `postgresql` requires to enable the following `extraMetrics`:
 
