--- a/modules/prometheus-exporter_kong/conf/readme.yaml
+++ b/modules/prometheus-exporter_kong/conf/readme.yaml
@@ -28,5 +28,5 @@ source_doc: |
           - '!kong_nginx_http_current_connections'
   ```
 
-  It uses whitelist [filtering](https://docs.signalfx.com/en/latest/integrations/agent/filtering.html)
+  It uses whitelist [filtering](https://github.com/signalfx/signalfx-agent/blob/main/docs/filtering.md)
   to keep only interesting metrics. Only the last two are required by this module.
