--- a/modules/smart-agent_elasticsearch/conf/readme.yaml
+++ b/modules/smart-agent_elasticsearch/conf/readme.yaml
@@ -1,16 +1,10 @@
 documentations:
   - name: Smart Agent monitor
     url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/elasticsearch.md'
-  - name: RabbitMQ management plugin
-    url: 'https://www.rabbitmq.com/management.html'
-  - name: Collection script
-    url: 'https://github.com/signalfx/collectd-rabbitmq'
+  - name: Splunk Observability integration
+    url: 'https://docs.splunk.com/Observability/gdi/elasticsearch/elasticsearch.html'
 
 source_doc: |
-  Check the [integration
-  documentation](https://docs.signalfx.com/en/latest/integrations/integrations-reference/integrations.elasticsearch.html)
-  in addition to the monitor one which it uses.
-
   ### Monitors
 
   You have to enable the following `extraMetrics` in your monitor configuration:
