--- a/modules/smart-agent_haproxy/conf/readme.yaml
+++ b/modules/smart-agent_haproxy/conf/readme.yaml
@@ -1,18 +1,12 @@
 documentations:
   - name: Smart Agent monitor
-    url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/collectd-haproxy.md'
+    url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/haproxy.md'
+  - name: Splunk Observability integration
+    url: 'https://docs.splunk.com/Observability/gdi/haproxy/haproxy.html'
   - name: HAproxy stats page
     url: 'https://www.haproxy.com/blog/exploring-the-haproxy-stats-page/'
-  - name: Collectd plugin
-    url: 'https://collectd.org/wiki/index.php/Haproxy'
-  - name: Collection script
-    url: 'https://github.com/signalfx/collectd-haproxy'
 
 source_doc: |
-  Check the [integration
-  documentation](https://docs.signalfx.com/en/latest/integrations/integrations-reference/integrations.haproxy.html)
-  in addition to the monitor one which it uses.
-
   ### Monitors
 
   You have to enable the following `extraMetrics` in your monitor configuration:
