--- a/modules/smart-agent_health-checker/conf/readme.yaml
+++ b/modules/smart-agent_health-checker/conf/readme.yaml
@@ -1,13 +1,13 @@
 documentations:
   - name: Smart Agent monitor
     url: https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/collectd-health-checker.md
-  - name: Collectd source code health_checker.py
-    url: https://github.com/signalfx/collectd-health_checker/blob/master/health_checker.py
+  - name: Splunk Observability integration
+    url: 'https://docs.splunk.com/Observability/gdi/health-checker/health-checker.html'
+  - name: Collectd plugin script
+    url: https://github.com/signalfx/collectd-health_checker
 
 source_doc: |
   ### Monitor
-
-  The detector of this module is based on metrics reported by the [collectd/health-checker](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/collectd-health-checker.md) monitor.
 
   It can monitor:
     * network port (use `health_checker_value`)
