--- a/modules/smart-agent_kubernetes-apiserver/conf/readme.yaml
+++ b/modules/smart-agent_kubernetes-apiserver/conf/readme.yaml
@@ -1,11 +1,8 @@
 documentations:
   - name: Smart Agent monitor
     url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/kubernetes-apiserver.md'
-
-source_doc: |
-  Follow the
-  [kubernetes-apiserver](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/kubernetes-apiserver.md)
-  monitor configuration to collect metrics.
+  - name: Splunk Observability integration
+    url: 'https://docs.splunk.com/Observability/gdi/kubernetes-apiserver/kubernetes-apiserver.html'
 
 notes: |
   For now this module only contains an heartbeat detector to check the health of the api server.
