--- a/modules/smart-agent_kubernetes-common/conf/readme.yaml
+++ b/modules/smart-agent_kubernetes-common/conf/readme.yaml
@@ -1,18 +1,18 @@
 documentations:
-
-
   - name: Smart Agent monitor kubernetes-cluster
     url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/kubernetes-cluster.md'
   - name: Smart Agent monitor kubelet-stats
     url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/kubelet-stats.md'
   - name: Smart Agent monitor kubelet-metrics
     url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/kubelet-metrics.md'
+  - name: Splunk Observability integration
+    url: 'https://docs.splunk.com/Observability/gdi/kubernetes-cluster/kubernetes-cluster.html'
 
 source_doc: |
   ### Agent
 
   Here is the official [main
-  documentation](https://docs.signalfx.com/en/latest/integrations/integrations-reference/integrations.kubernetes.html) for
+  documentation](https://github.com/signalfx/integrations/blob/master/kubernetes/SMART_AGENT_MONITOR.md) for
   kubernetes including the `signalfx-agent` installation which must be installed as
   [daemonset](https://kubernetes.io/docs/concepts/workloads/controllers/daemonset/) on your cluster.
 
@@ -23,9 +23,6 @@ source_doc: |
   * [kubelet-metrics](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/kubelet-metrics.md) for Kubernetes `>= 1.18`
   * [kubelet-stats](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/kubelet-stats.md) for Kubernetes `< 1.18
   * [kubernetes-cluster](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/kubernetes-cluster.md)
-
-  [Others](https://docs.signalfx.com/en/latest/integrations/kubernetes/k8s-monitors-observers.html#monitors-observers)
-  exist to increase visibility or may be in future to enrich this modules or create new ones.
 
   The `kubernetes-cluster` requires to enable the following `extraMetrics`:
 
