--- a/modules/smart-agent_kubernetes-volumes/conf/readme.yaml
+++ b/modules/smart-agent_kubernetes-volumes/conf/readme.yaml
@@ -3,26 +3,11 @@ documentations:
     url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/kubernetes-volumes.md'
 
 source_doc: |
-  ### Agent
-
-  Here is the official [main
-  documentation](https://docs.signalfx.com/en/latest/integrations/integrations-reference/integrations.kubernetes.html) for
-  kubernetes including the `signalfx-agent` installation which must be installed as
-  [daemonset](https://kubernetes.io/docs/concepts/workloads/controllers/daemonset/) on your cluster.
-
   ### Monitors
 
-  The detectors in this module are based on metrics reported by the following monitors:
+  This monitor does support non persistent volume types filtered out in this module before `signalfx-agent` `v5.3.2` version.
 
-  * [kubernetes-volumes](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/kubernetes-volumes.md)
-
-  The `kubernetes-volumes` monitor does support non persistent volume types filtered out in this module before
-  `signalfx-agent` `v5.3.2` version.
-
-  [Others](https://docs.signalfx.com/en/latest/integrations/kubernetes/k8s-monitors-observers.html#monitors-observers)
-  exist to increase visibility or may be in future to enrich this modules or create new ones.
-
-  The `kubernetes-volumes` requires to enable the following `extraMetrics`:
+  It requires to enable the following `extraMetrics`:
 
   * `kubernetes.volume_inodes`
   * `kubernetes.volume_inodes_free`
@@ -63,4 +48,4 @@ notes: |
   it must also have the `get`, `list` and `watch` on `persistentvolumes` and `persistentvolumeclaim` resources.
 
   * If you use the [Helm chart](https://github.com/signalfx/signalfx-agent/tree/master/deployments/k8s/helm/signalfx-agent)
-  to deploy the agent, so you need chart version `>= 1.5.0` and enable `gatherVolumesMetrics: true` in `values.yml`.
+  to deploy the agent, so you need chart version `>= 1.6.0` and enable `gatherVolumesMetrics: true` in `values.yml`.
