--- a/modules/smart-agent_nginx-ingress/conf/readme.yaml
+++ b/modules/smart-agent_nginx-ingress/conf/readme.yaml
@@ -1,15 +1,10 @@
 documentations:
   - name: Smart Agent monitor
     url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/prometheus-nginx-ingress.md'
+  - name: Splunk Observability integration
+    url: 'https://docs.splunk.com/Observability/gdi/prometheus-nginx-ingress/prometheus-nginx-ingress.html'
 
 source_doc: |
-  ### Agent
-
-  Here is the official [main
-  documentation](https://docs.signalfx.com/en/latest/integrations/integrations-reference/integrations.kubernetes.html) for
-  kubernetes including the `signalfx-agent` installation which must be installed as
-  [daemonset](https://kubernetes.io/docs/concepts/workloads/controllers/daemonset/) on your cluster.
-
   ### Monitors
 
   The detectors in this module are based on metrics reported by the following monitors:
@@ -21,7 +16,7 @@ source_doc: |
   metrics while prometheus metrics are considered as custom metrics which could have an impact on SignalFx billing.
 
   You must configure it for every ingress deployments so this is almost sure you will need to use [service
-  discovery](https://docs.signalfx.com/en/latest/integrations/agent/auto-discovery.html) to do it dynamically.
+  discovery](https://github.com/signalfx/signalfx-agent/blob/main/docs/auto-discovery.md) to do it dynamically.
 
   Detectors in this module will at least require these metrics:
 
@@ -70,7 +65,7 @@ notes: |
           - '!nginx_ingress_controller_nginx_process_resident_memory_bytes'
   ```
 
-  It uses whitelist [filtering](https://docs.signalfx.com/en/latest/integrations/agent/filtering.html)
+  It uses whitelist [filtering](https://github.com/signalfx/signalfx-agent/blob/main/docs/filtering.md)
   to keep only interesting metrics. Only the first two are required by this module.
 
   You can replace `prometheus/nginx-ingress` by `prometheus-exporter` to make this module works
