--- a/modules/smart-agent_php-fpm/conf/readme.yaml
+++ b/modules/smart-agent_php-fpm/conf/readme.yaml
@@ -1,13 +1,12 @@
 documentations:
   - name: Smart Agent monitor
     url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/collectd-php-fpm.md'
+  - name: Splunk Observability integration
+    url: 'https://docs.splunk.com/Observability/gdi/collectd/collectd-php-fpm.html'
   - name: Collectd plugin
     url: 'https://collectd.org/wiki/index.php/Plugin:cURL-JSON'
 
 source_doc: |
-  There is no SignalFx official integration for `php-fpm` but there is still a
-  [monitor](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/collectd-php-fpm.md) to use.
-
   ### Monitors
 
   This monitor is only available for agent `>= 5.2.0` but for previous versions you can use the generic
