--- a/modules/smart-agent_solr/conf/readme.yaml
+++ b/modules/smart-agent_solr/conf/readme.yaml
@@ -1,18 +1,7 @@
 documentations:
   - name: Smart Agent monitor
     url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/collectd-solr.md'
-  - name: Collection script
+  - name: Splunk Observability integration
+    url: 'https://docs.splunk.com/Observability/gdi/solr/solr.html'
+  - name: Collectd script
     url: 'https://github.com/signalfx/collectd-solr'
-
-source_doc: |
-  Check the [integration
-  documentation](https://docs.signalfx.com/en/latest/integrations/integrations-reference/integrations.apache.solr.html)
-  in addition to the monitor one which it uses.
-
-  ### Monitors
-
-  The `collectd/zookeeper` monitor requires to enable the following `extraMetrics`:
-
-  * `counter.solr.zookeeper_errors`
-
-  It can collect metrics from Solr only when a Solr instance is running in SolrCloud mode.
