--- a/modules/smart-agent_supervisor/conf/readme.yaml
+++ b/modules/smart-agent_supervisor/conf/readme.yaml
@@ -1,13 +1,12 @@
 documentations:
   - name: Smart Agent monitor
     url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/supervisor.md'
+  - name: Splunk Observability integration
+    url: 'https://docs.splunk.com/Observability/gdi/supervisor/supervisor.html'
   - name: Supervisor state definition
     url: 'http://supervisord.org/subprocess.html#process-states'
 
 source_doc: |
-  There is no SignalFx official integration for `supervisor` but there is still a
-  [monitor](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/supervisor.md) to use.
-
   ### Monitors
 
   This monitor is only available for agent `>= 5.2.0`.
