--- a/modules/integration_aws-lambda/conf/03-invocations.yaml
+++ b/modules/integration_aws-lambda/conf/03-invocations.yaml
@@ -5,6 +5,7 @@ transformation: ".sum(over='1h')"
 aggregation: ".mean(by=['FunctionName'])"
 filtering: "filter('namespace', 'AWS/Lambda') and filter('stat', 'sum') and filter('Resource', '*')"
 disabled: true
+max_delay: 600
 
 signals:
   signal:
