--- a/modules/integration_aws-lambda/conf/01-errors-percentage.yaml
+++ b/modules/integration_aws-lambda/conf/01-errors-percentage.yaml
@@ -6,6 +6,7 @@ transformation: true
 aggregation: ".mean(by=['FunctionName'])"
 filtering: "filter('namespace', 'AWS/Lambda') and filter('stat', 'sum') and filter('Resource', '*')"
 value_unit: "%"
+max_delay: 600
 
 signals:
   errors:
